# booth-basecamp

./: .gitignore  ADR.md  CLAUDE.md  FURPS.md  LICENSE-MIT  PROJECT_KNOWLEDGE.md  README.md
docs/: CONNECTING-LIQUIDSOAP.md  CONNECTING-OBS.md  HOW-IT-WORKS.md  RUN-PSR-STATION.md  ZERO-TO-STREAMING.md  headless-delivery-events.md  radio-upgrade-fork-tree.md  retro-log.md
docs/design/: station-identity-v2.md
docs/halts/: 2026-06-22-radio-receiver-268-demo.md  2026-07-05-parallel-society-radio-live.md
docs/parallel-society-radio/: content.md  loudnorm.sh  station.liq
docs/plans/: radio-implementation.md  tor-onion.md
docs/skills/: README.md  audio-loudnorm-two-pass-per-type.md  liquidsoap-source-client-mediamtx.md
docs/talks/: 2026-06-17-berlin-blockchain-week.transcript.txt  radio-presentation-notes.md
radio_module/: CMakeLists.txt  flake.nix  metadata.json
radio_module/src/: pgp_words.h  radio_interface.h  radio_plugin.cpp  radio_plugin.h  station_identity.cpp  station_identity.h
radio_module/tests/: direct_test.cpp  identity_selftest.cpp  run-direct-test.sh
radio_ui/: CMakeLists.txt  Main.qml  metadata.json
radio_ui/src/: radio_ui.rep  radio_ui_backend.cpp  radio_ui_backend.h
radio_ui/tests/: ui-tests.mjs
scripts/: install.sh  relaunch.sh
